--- a/index.html
+++ b/index.html
@@ -67,15 +67,17 @@
     </p>
   </section>
 
-  <section class="max-w-3xl mt-12 px-4">
+ <section class="max-w-3xl mt-12 px-4">
   <h2 class="text-4xl mb-6">Momentos que marcam</h2>
   <div class="grid grid-cols-2 gap-6">
-    <img src="fotos/foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="fotos/foto5.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="fotos/foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="fotos/foto1.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto3.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto5.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto1.jpg" alt="Momento 5" class="rounded-lg shadow-lg border-4 border-pink-300" />
   </div>
 </section>
+
 
 
   <footer class="mt-16 mb-6 text-pink-600 italic text-lg">
