--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
 </head>
 <body class="min-h-screen flex flex-col items-center p-6 text-center text-pink-800">
 
-  <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
+  <!-- Foto principal em cima -->
+  <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-10 border-8 border-pink-300" />
 
-  <!-- Foto principal -->
-  <img src="fotos/foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-8 border-8 border-pink-300" />
+  <!-- Grid das quatro fotos menores embaixo -->
+  <div class="grid grid-cols-2 gap-6 max-w-3xl w-full mb-12">
+    <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto3.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    <img src="foto5.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
+  </div>
+
+  <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
 
   <section class="max-w-3xl mb-12 px-4">
     <h2 class="text-4xl mb-4">Para o meu amor eterno</h2>
@@ -66,19 +74,6 @@
       Obrigado por ser minha companhia, meu melhor amigo e o amor da minha vida. Que venham muitos anos de felicidade ao nosso lado.
     </p>
   </section>
-
- <section class="max-w-3xl mt-12 px-4">
-  <h2 class="text-4xl mb-6">Momentos que marcam</h2>
-  <div class="grid grid-cols-2 gap-6">
-    <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto3.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto5.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto1.jpg" alt="Momento 5" class="rounded-lg shadow-lg border-4 border-pink-300" />
-  </div>
-</section>
-
-
 
   <footer class="mt-16 mb-6 text-pink-600 italic text-lg">
     Com amor, <br />
