--- a/index.html
+++ b/index.html
@@ -39,23 +39,14 @@
     }
   </style>
 </head>
-<body class="min-h-screen flex flex-col items-center p-6 text-center text-pink-800">
+<body class="min-h-screen flex flex-col items-center p-6 text-pink-800">
 
-  <!-- Foto principal em cima -->
-  <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-10 border-8 border-pink-300" />
+  <!-- Foto principal no topo -->
+  <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-lg mb-10 border-8 border-pink-300" />
 
-  <!-- Grid das quatro fotos menores embaixo -->
-  <div class="grid grid-cols-2 gap-6 max-w-3xl w-full mb-12">
-    <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto3.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    <img src="foto5.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
-  </div>
-
-  <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
-
-  <section class="max-w-3xl mb-12 px-4">
-    <h2 class="text-4xl mb-4">Para o meu amor eterno</h2>
+  <!-- Texto 1 -->
+  <section class="max-w-3xl mb-16 px-4 text-center">
+    <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
     <p class="text-xl italic mb-6">
       “Desde o dia em que te conheci, tudo ganhou mais cor e brilho. Você é meu porto seguro, minha inspiração e a razão dos meus melhores sorrisos.”
     </p>
@@ -64,18 +55,44 @@
     </p>
   </section>
 
-  <section class="max-w-3xl mb-12 px-4 bg-pink-100 rounded-xl shadow-md p-6">
-    <h2 class="text-3xl mb-4">Nosso Amor em Palavras</h2>
-    <p class="mb-4 text-lg leading-relaxed">
-      “Amar você é descobrir a beleza nos pequenos gestos e sentir que, mesmo nas dificuldades, nosso amor só se fortalece.
-      É saber que ao seu lado encontrei minha melhor versão.”
-    </p>
-    <p class="text-lg">
-      Obrigado por ser minha companhia, meu melhor amigo e o amor da minha vida. Que venham muitos anos de felicidade ao nosso lado.
-    </p>
+  <!-- Texto 2 com foto ao lado -->
+  <section class="max-w-5xl mb-16 px-4 flex flex-col md:flex-row items-center md:items-start gap-10">
+    <div class="md:w-1/2 text-center md:text-left">
+      <h2 class="text-4xl mb-6">Nosso Amor em Palavras</h2>
+      <p class="mb-6 text-lg leading-relaxed">
+        “Amar você é descobrir a beleza nos pequenos gestos e sentir que, mesmo nas dificuldades, nosso amor só se fortalece.
+        É saber que ao seu lado encontrei minha melhor versão.”
+      </p>
+      <p class="text-lg">
+        Obrigado por ser minha companhia, meu melhor amigo e o amor da minha vida. Que venham muitos anos de felicidade ao nosso lado.
+      </p>
+    </div>
+    <img src="foto2.jpg" alt="Momento especial" class="md:w-1/2 rounded-lg shadow-lg border-4 border-pink-300" />
   </section>
 
-  <footer class="mt-16 mb-6 text-pink-600 italic text-lg">
+  <!-- Texto 3 com foto ao lado invertido -->
+  <section class="max-w-5xl mb-16 px-4 flex flex-col md:flex-row items-center md:items-start gap-10">
+    <img src="foto3.jpg" alt="Momento especial" class="md:w-1/2 rounded-lg shadow-lg border-4 border-pink-300" />
+    <div class="md:w-1/2 text-center md:text-left">
+      <h2 class="text-4xl mb-6">Momentos que marcam</h2>
+      <p class="text-lg leading-relaxed">
+        Cada instante ao seu lado é uma história de amor que guardo no coração. Que possamos colecionar muitos sorrisos, abraços e conquistas juntos.
+      </p>
+    </div>
+  </section>
+
+  <!-- Últimas quatro fotos em grid no final -->
+  <section class="max-w-4xl mb-16 px-4 text-center">
+    <h2 class="text-4xl mb-8">Recordações Queridas</h2>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
+      <img src="foto4.jpg" alt="Memória 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
+      <img src="foto5.jpg" alt="Memória 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
+      <img src="foto1.jpg" alt="Memória 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
+      <img src="foto2.jpg" alt="Memória 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
+    </div>
+  </section>
+
+  <footer class="mb-6 text-pink-600 italic text-lg text-center">
     Com amor, <br />
     <strong>Seu nome</strong>
   </footer>
@@ -95,7 +112,6 @@
         heart.remove();
       }, 10000);
     }
-
     setInterval(createHeart, 400);
   </script>
 
