--- a/index.html
+++ b/index.html
@@ -11,29 +11,11 @@
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       background: linear-gradient(to bottom, #fbcfe8, #f9a8d4);
       overflow-x: hidden;
-      position: relative;
-      min-height: 100vh;
     }
     h1, h2 {
       font-family: 'Great Vibes', cursive;
       text-shadow: 1px 1px 3px #f48fb1;
     }
-
-    /* Partículas (estrelas) no fundo */
-    .star {
-      position: fixed;
-      background: white;
-      border-radius: 50%;
-      opacity: 0.8;
-      animation: twinkle 3s infinite ease-in-out;
-      pointer-events: none;
-      z-index: 0;
-    }
-    @keyframes twinkle {
-      0%, 100% {opacity: 0.8;}
-      50% {opacity: 0.2;}
-    }
-
     /* Animação de corações subindo */
     .heart {
       position: fixed;
@@ -44,7 +26,6 @@
       opacity: 0.8;
       user-select: none;
       pointer-events: none;
-      z-index: 10;
     }
     @keyframes floatUp {
       0% {
@@ -56,47 +37,25 @@
         opacity: 0;
       }
     }
-
-    /* Botão QR */
-    #qrButton {
-      background-color: #ec4899;
-      color: white;
-      font-weight: bold;
-      padding: 12px 24px;
-      border-radius: 9999px;
-      box-shadow: 0 4px 6px rgba(236,72,153,0.6);
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      user-select: none;
-      margin: 1rem auto;
-      display: block;
-      max-width: 250px;
-    }
-    #qrButton:hover {
-      background-color: #db2777;
-    }
-
-    /* Caixa do QR code */
-    #qrCodeContainer {
-      margin: 1rem auto;
-      max-width: 220px;
-      padding: 10px;
-      background: white;
-      border-radius: 1rem;
-      box-shadow: 0 4px 15px rgba(236,72,153,0.5);
-      display: none;
-    }
-
   </style>
 </head>
-<body class="min-h-screen flex flex-col items-center p-6 text-center text-pink-800 relative">
+<body class="min-h-screen flex flex-col items-center p-6 text-center text-pink-800">
 
-  <h1 class="text-6xl mb-6 z-20">Feliz Dia dos Namorados 💖</h1>
+  <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
+
+  <!-- Player da música -->
+  <div class="mb-10">
+    <iframe width="320" height="180" src="https://www.youtube.com/embed/VlRcXGQ3Kkk?autoplay=0&controls=1" 
+      title="Você é assim, um sonho pra mim - Natiruts" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen>
+    </iframe>
+  </div>
 
   <!-- Foto principal -->
-  <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-8 border-8 border-pink-300 z-20" />
+  <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-8 border-8 border-pink-300" />
 
-  <section class="max-w-3xl mb-12 px-4 z-20">
+  <section class="max-w-3xl mb-12 px-4">
     <h2 class="text-4xl mb-4">Para o meu amor eterno</h2>
     <p class="text-xl italic mb-6">
       “Desde o dia em que te conheci, tudo ganhou mais cor e brilho. Você é meu porto seguro, minha inspiração e a razão dos meus melhores sorrisos.”
@@ -106,7 +65,7 @@
     </p>
   </section>
 
-  <section class="max-w-3xl mb-12 px-4 bg-pink-100 rounded-xl shadow-md p-6 z-20">
+  <section class="max-w-3xl mb-12 px-4 bg-pink-100 rounded-xl shadow-md p-6">
     <h2 class="text-3xl mb-4">Nosso Amor em Palavras</h2>
     <p class="mb-4 text-lg leading-relaxed">
       “Amar você é descobrir a beleza nos pequenos gestos e sentir que, mesmo nas dificuldades, nosso amor só se fortalece.
@@ -117,10 +76,7 @@
     </p>
   </section>
 
-  <!-- Mensagem rotativa -->
-  <p id="mensagem-rotativa" class="text-xl italic text-pink-700 mb-6 z-20"></p>
-
-  <section class="max-w-3xl mt-12 px-4 z-20">
+  <section class="max-w-3xl mt-12 px-4">
     <h2 class="text-4xl mb-6">Momentos que marcam</h2>
     <div class="grid grid-cols-2 gap-6">
       <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
@@ -130,10 +86,7 @@
     </div>
   </section>
 
-  <button id="qrButton" class="z-20">Mostrar QR Code do Presente</button>
-  <div id="qrCodeContainer" class="z-20"></div>
-
-  <footer class="mt-16 mb-6 text-pink-600 italic text-lg z-20">
+  <footer class="mt-16 mb-6 text-pink-600 italic text-lg">
     Com amor, <br />
     <strong>Seu nome</strong>
   </footer>
@@ -153,68 +106,9 @@
         heart.remove();
       }, 10000);
     }
+
     setInterval(createHeart, 400);
+  </script>
 
-    // Estrelas no fundo
-    function createStar() {
-      const star = document.createElement('div');
-      star.classList.add('star');
-      star.style.width = (1 + Math.random() * 3) + 'px';
-      star.style.height = star.style.width;
-      star.style.left = Math.random() * window.innerWidth + 'px';
-      star.style.top = Math.random() * window.innerHeight + 'px';
-      star.style.animationDuration = (2 + Math.random() * 3) + 's';
-      document.body.appendChild(star);
-
-      setTimeout(() => {
-        star.remove();
-      }, 5000);
-    }
-    setInterval(createStar, 300);
-
-    // Mensagem rotativa
-    const frases = [
-      "Você é minha luz nos dias mais escuros.",
-      "Nosso amor é a mais bela história já contada.",
-      "Cada momento contigo é eterno.",
-      "Meu coração bate por você, hoje e sempre."
-    ];
-    let index = 0;
-    const elemento = document.getElementById('mensagem-rotativa');
-
-    function trocaMensagem() {
-      elemento.textContent = frases[index];
-      index = (index + 1) % frases.length;
-    }
-    trocaMensagem();
-    setInterval(trocaMensagem, 4000);
-
-    // Gerar e mostrar QR Code com biblioteca externa (QRCode.js)
-    const qrButton = document.getElementById('qrButton');
-    const qrCodeContainer = document.getElementById('qrCodeContainer');
-    let qrVisible = false;
-
-    // Importar QRCode.js dinamicamente
-    function loadQRCodeLib(callback) {
-      const script = document.createElement('script');
-      script.src = 'https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js';
-      script.onload = callback;
-      document.head.appendChild(script);
-    }
-
-    function toggleQRCode() {
-      if (qrVisible) {
-        qrCodeContainer.style.display = 'none';
-        qrCodeContainer.innerHTML = '';
-        qrButton.textContent = 'Mostrar QR Code do Presente';
-        qrVisible = false;
-      } else {
-        qrCodeContainer.style.display = 'block';
-        qrButton.textContent = 'Ocultar QR Code do Presente';
-
-        // Criar QR Code - coloque aqui o link do seu presente (exemplo)
-        const urlPresente = 'https://pjhevison.github.io/Dia-dos-namorados/';
-
-        new QRCode(qrCodeContainer, {
-          text: urlPresente,
-          width
+</body>
+</html>
