--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- Player da música -->
   <div class="mb-10">
-    <iframe width="320" height="180" src="https://www.youtube.com/embed/VlRcXGQ3Kkk?autoplay=0&controls=1" 
+    <iframe width="320" height="180" src="https://youtu.be/ZkbuGPXJOPA?feature=shared" 
       title="Você é assim, um sonho pra mim - Natiruts" frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
       allowfullscreen>
