--- a/index.html
+++ b/index.html
@@ -11,11 +11,28 @@
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
       background: linear-gradient(to bottom, #fbcfe8, #f9a8d4);
       overflow-x: hidden;
+      position: relative;
+      min-height: 100vh;
     }
     h1, h2 {
       font-family: 'Great Vibes', cursive;
       text-shadow: 1px 1px 3px #f48fb1;
     }
+
+    /* Fundo Bokeh rosa suave */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background:
+        radial-gradient(circle at 20% 20%, rgba(255,182,193,0.3), transparent 40%),
+        radial-gradient(circle at 80% 30%, rgba(255,105,180,0.25), transparent 50%),
+        radial-gradient(circle at 40% 80%, rgba(255,182,193,0.2), transparent 50%),
+        radial-gradient(circle at 75% 75%, rgba(255,105,180,0.15), transparent 60%);
+      pointer-events: none;
+      z-index: 0;
+    }
+
     /* Animação de corações subindo */
     .heart {
       position: fixed;
@@ -26,6 +43,7 @@
       opacity: 0.8;
       user-select: none;
       pointer-events: none;
+      z-index: 10;
     }
     @keyframes floatUp {
       0% {
@@ -37,59 +55,107 @@
         opacity: 0;
       }
     }
+
+    /* Corações que batem no centro */
+    .pulse-heart {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #ec4899;
+      font-size: 80px;
+      opacity: 0.15;
+      animation: pulse 2s ease-in-out infinite;
+      user-select: none;
+      pointer-events: none;
+      z-index: 5;
+    }
+    @keyframes pulse {
+      0%, 100% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0.15;
+      }
+      50% {
+        transform: translate(-50%, -50%) scale(1.1);
+        opacity: 0.3;
+      }
+    }
+
+    /* Estilo do container para garantir o conteúdo acima do bokeh */
+    .content {
+      position: relative;
+      z-index: 20;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    /* Máquina de escrever */
+    .typewriter-text {
+      font-size: 1.125rem;
+      font-style: normal;
+      white-space: pre-wrap;
+      border-right: 2px solid #ec4899;
+      overflow: hidden;
+      max-width: 100%;
+      margin: 0 auto;
+    }
   </style>
 </head>
 <body class="min-h-screen flex flex-col items-center p-6 text-center text-pink-800">
 
-  <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
+  <div class="pulse-heart">❤️</div>
 
-  <!-- Player da música -->
-  <div class="mb-10">
-    <iframe width="320" height="180" src="https://youtu.be/ZkbuGPXJOPA?feature=shared" 
-      title="Você é assim, um sonho pra mim - Natiruts" frameborder="0" 
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-      allowfullscreen>
-    </iframe>
+  <div class="content">
+    <h1 class="text-6xl mb-6">Feliz Dia dos Namorados 💖</h1>
+
+    <!-- Foto principal -->
+    <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-8 border-8 border-pink-300" />
+
+    <section class="mb-12 px-4">
+      <h2 class="text-4xl mb-4">Para o meu amor eterno</h2>
+      <p class="text-xl italic mb-6">
+        “Desde o dia em que te conheci, tudo ganhou mais cor e brilho. Você é meu porto seguro, minha inspiração e a razão dos meus melhores sorrisos.”
+      </p>
+      <p class="text-lg">
+        Quero caminhar ao seu lado por todos os dias da vida, dividindo sonhos, abraços e momentos inesquecíveis. Você é o presente mais lindo que o destino poderia me dar.
+      </p>
+    </section>
+
+    <section class="mb-12 px-4 bg-pink-100 rounded-xl shadow-md p-6">
+      <h2 class="text-3xl mb-4">Nosso Amor em Palavras</h2>
+      <p id="typewriter" class="typewriter-text"></p>
+    </section>
+
+    <section class="mb-12 px-4">
+      <h2 class="text-4xl mb-6">Nosso Vídeo</h2>
+      <div class="aspect-w-16 aspect-h-9 max-w-xl mx-auto rounded-xl overflow-hidden shadow-lg">
+        <iframe
+          src="https://www.youtube.com/embed/ZkbuGPXJOPA"
+          title="Você é assim, um sonho pra mim"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+          class="w-full h-64 md:h-96"
+        ></iframe>
+      </div>
+    </section>
+
+    <section class="mt-12 px-4">
+      <h2 class="text-4xl mb-6">Momentos que marcam</h2>
+      <div class="grid grid-cols-2 gap-6">
+        <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
+        <img src="foto3.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
+        <img src="foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
+        <img src="foto5.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
+      </div>
+    </section>
+
+    <footer class="mt-16 mb-6 text-pink-600 italic text-lg">
+      Com amor, <br />
+      <strong>Seu nome</strong>
+    </footer>
   </div>
-
-  <!-- Foto principal -->
-  <img src="foto1.jpg" alt="Casal apaixonado" class="rounded-xl shadow-lg max-w-md mb-8 border-8 border-pink-300" />
-
-  <section class="max-w-3xl mb-12 px-4">
-    <h2 class="text-4xl mb-4">Para o meu amor eterno</h2>
-    <p class="text-xl italic mb-6">
-      “Desde o dia em que te conheci, tudo ganhou mais cor e brilho. Você é meu porto seguro, minha inspiração e a razão dos meus melhores sorrisos.”
-    </p>
-    <p class="text-lg">
-      Quero caminhar ao seu lado por todos os dias da vida, dividindo sonhos, abraços e momentos inesquecíveis. Você é o presente mais lindo que o destino poderia me dar.
-    </p>
-  </section>
-
-  <section class="max-w-3xl mb-12 px-4 bg-pink-100 rounded-xl shadow-md p-6">
-    <h2 class="text-3xl mb-4">Nosso Amor em Palavras</h2>
-    <p class="mb-4 text-lg leading-relaxed">
-      “Amar você é descobrir a beleza nos pequenos gestos e sentir que, mesmo nas dificuldades, nosso amor só se fortalece.
-      É saber que ao seu lado encontrei minha melhor versão.”
-    </p>
-    <p class="text-lg">
-      Obrigado por ser minha companhia, meu melhor amigo e o amor da minha vida. Que venham muitos anos de felicidade ao nosso lado.
-    </p>
-  </section>
-
-  <section class="max-w-3xl mt-12 px-4">
-    <h2 class="text-4xl mb-6">Momentos que marcam</h2>
-    <div class="grid grid-cols-2 gap-6">
-      <img src="foto2.jpg" alt="Momento 1" class="rounded-lg shadow-lg border-4 border-pink-300" />
-      <img src="foto3.jpg" alt="Momento 2" class="rounded-lg shadow-lg border-4 border-pink-300" />
-      <img src="foto4.jpg" alt="Momento 3" class="rounded-lg shadow-lg border-4 border-pink-300" />
-      <img src="foto5.jpg" alt="Momento 4" class="rounded-lg shadow-lg border-4 border-pink-300" />
-    </div>
-  </section>
-
-  <footer class="mt-16 mb-6 text-pink-600 italic text-lg">
-    Com amor, <br />
-    <strong>Seu nome</strong>
-  </footer>
 
   <!-- Corações flutuantes -->
   <script>
@@ -108,7 +174,27 @@
     }
 
     setInterval(createHeart, 400);
-  </script>
 
+    // Máquina de escrever
+    const texto = `“Amar você é descobrir a beleza nos pequenos gestos e sentir que, mesmo nas dificuldades, nosso amor só se fortalece.
+É saber que ao seu lado encontrei minha melhor versão.
+Obrigado por ser minha companhia, meu melhor amigo e o amor da minha vida. Que venham muitos anos de felicidade ao nosso lado.”`;
+
+    const typewriterElement = document.getElementById('typewriter');
+    let index = 0;
+
+    function typeWriter() {
+      if (index < texto.length) {
+        typewriterElement.textContent += texto.charAt(index);
+        index++;
+        setTimeout(typeWriter, 50);
+      } else {
+        // Remove a borda depois de escrever
+        typewriterElement.style.borderRight = 'none';
+      }
+    }
+
+    typeWriter();
+  </script>
 </body>
 </html>
