--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p class="mb-4 italic text-pink-700">Clique na imagem para ouvir “Você é assim, um sonho pra mim” no YouTube</p>
     
     <a href="https://youtu.be/ZkbuGPXJOPA" target="_blank" rel="noopener noreferrer" class="inline-block">
-      <img src="https://img.youtube.com/vi/ZkbuGPXJOPA/maxresdefault.jpg" alt="Você é assim, um sonho pra mim - thumbnail" class="rounded-lg shadow-lg mx-auto max-w-full cursor-pointer hover:opacity-80 transition-opacity" />
+      <img src="https://img.youtube.com/vi/ZkbuGPXJOPA/maxresdefault.jpg" />
     </a>
   </section>
 
