--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
     </p>
   </section>
 
-  <!-- Seção do vídeo com link para YouTube -->
-  <section class="max-w-3xl mb-12 px-4 text-center">
-    <h2 class="text-3xl mb-4">Uma música especial para você</h2>
-    <p class="mb-4 italic text-pink-700">Clique na imagem para ouvir “Você é assim, um sonho pra mim” no YouTube</p>
-    
-    <a href="https://youtu.be/ZkbuGPXJOPA" target="_blank" rel="noopener noreferrer" class="inline-block">
-      <img src="https://img.youtube.com/vi/ZkbuGPXJOPA/maxresdefault.jpg" />
-    </a>
-  </section>
+<!-- Seção do vídeo com link para YouTube -->
+<section class="max-w-3xl mb-12 px-4 text-center">
+  <h2 class="text-3xl mb-4">uma música que representa a gente</h2>
+  
+  <a href="https://youtu.be/ZkbuGPXJOPA" target="_blank" rel="noopener noreferrer" class="inline-block">
+    <img src="https://img.youtube.com/vi/ZkbuGPXJOPA/maxresdefault.jpg" alt="Você é assim, um sonho pra mim - thumbnail" class="rounded-lg shadow-lg mx-auto max-w-full cursor-pointer hover:opacity-80 transition-opacity" />
+  </a>
+</section>
+
 
  <section class="max-w-3xl mt-12 px-4">
   <h2 class="text-4xl mb-6">Momentos que marcam</h2>
