--- a/index.html
+++ b/index.html
@@ -68,13 +68,16 @@
   </section>
 
 <!-- Seção do vídeo com link para YouTube -->
+<!-- Seção do vídeo com link para YouTube -->
 <section class="max-w-3xl mb-12 px-4 text-center">
   <h2 class="text-3xl mb-4">uma música que representa a gente</h2>
   
   <a href="https://youtu.be/ZkbuGPXJOPA" target="_blank" rel="noopener noreferrer" class="inline-block">
-    <img src="https://img.youtube.com/vi/ZkbuGPXJOPA/maxresdefault.jpg" alt="Você é assim, um sonho pra mim - thumbnail" class="rounded-lg shadow-lg mx-auto max-w-full cursor-pointer hover:opacity-80 transition-opacity" />
+    <img src="https://img.youtube.com/vi/ZkbuGPXJOPA/maxresdefault.jpg"/>
   </a>
 </section>
+
+
 
 
  <section class="max-w-3xl mt-12 px-4">
